--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <header class="site-header">
     <div class="container nav-wrap">
       <a class="brand" href="index.html">
-        <img src="2-logo-dn.png" alt="Destini Numbers logo">
+        <img src="2-logo-dn.png" alt="Destini Numbers logo" onerror="this.style.display='none'">
         <span class="brand-title">Destini Numbers</span>
       </a>
       <button class="nav-toggle" aria-expanded="false" aria-label="Open menu">Menu</button>
@@ -141,7 +141,7 @@
             <div class="orbit-ring ring-2"></div>
             <div class="orbit-ring ring-3"></div>
             <div class="orbit-core" data-parallax="22">
-              <img src="2-logo-dn.png" alt="Destini Numbers symbol">
+              <i class="fa-solid fa-om" style="font-size: 32px; color: #e65100;"></i>
             </div>
           </div>
           <h2>What You Get</h2>
